--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <div>
     <!--présentation des services-->
     <ul>nos service:
-        <li> réparation de la carrosserie</li>
-        <li> réparation de la mécanique</li>
-        <li> entretien </li>
-        <li> véhicule d'occasion</li>
+        <li> réparation de la carrosserie <a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\contact.php">nous contacter</a></li>
+        <li> réparation de la mécanique <a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\contact.php">nous contacter</a></li>
+        <li> entretien<a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\contact.php">nous contacter</a> </li>
+        <li> <a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\boutique.php">véhicule d'occasion</a></li>
     </ul>
 </div>
 
@@ -37,5 +37,8 @@ Vincent Parrot considère son atelier comme un véritable lieu de confiance pour
     <!--ajout des horraire d'ouverture-->
     <a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\horraire_d'ouverture.png">horaire d'ouverture</a>
    </div>
+   <footer>
+    <a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\contact.php">Nous contacter</a>
+   </footer>
 </body>
 </html>
