add page product

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <strong> Garage V.Parrot</strong>
 </h1>
 <!--ajout du logo-->
-<a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\logo V.PARROT.png">logo du garage</a>
+<img src="C:\Users\Admin\ECF_develloppeurfullstack_garage\logo V.PARROT.png" alt="logo du garage">
 <h2>
     <em>
          Parrot, fort de ses 15 années d'expérience dans la réparation automobile, a ouvert son propre garage à Toulouse en 2021.
