--- a/page produits.html
+++ b/page produits.html
@@ -1,5 +1,7 @@
 <h1>liste de tout de nos véhicules d'occasion</h1>
 
+<img src="C:\Users\Admin\ECF_develloppeurfullstack_garage\logo V.PARROT.png" alt="logo"
+
 <!-- Formulaire de filtre -->
 <form id="filterForm">
     <label for="priceRange">Fourchette de prix:</label>
@@ -123,3 +125,6 @@
         // Vous pouvez utiliser du code JavaScript pour ajouter ou supprimer des éléments de la liste en fonction des résultats filtrés
     }
 </script>
+<footer>
+    <a href="C:\Users\Admin\ECF_develloppeurfullstack_garage\contact.php">Nous contacter</a>
+</footer>
